--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": ["error"]
   },
   "browserslist": {
     "production": [
